Upgraded project-lab1