@@ -8,12 +8,13 @@ import java.util.stream.Collectors;
 
 public class OptionsParser {
     public static List<MoveDirection> parse(String[] args) {
-        return Arrays.stream(args).map(arg -> switch (arg) {
+        return Arrays.stream(args)
+                .map(arg -> switch (arg) {
             case "f", "forward" -> MoveDirection.FORWARD;
             case "b", "backward" -> MoveDirection.BACKWARD;
             case "r", "right" -> MoveDirection.RIGHT;
             case "l", "left" -> MoveDirection.LEFT;
             default -> throw new IllegalArgumentException(arg + " is not legal move specification");
-        }).collect(Collectors.toList());
+        }).toList();
     }
 }
